# gateway

./: Cargo.toml  README.md
front_src/: package-lock.json  package.json
front_src/public/: font.css  index.html
front_src/src/: App.css  App.js  login.js  topBar.js  utils.js
schemas/: lib.rs  test.capnp  test_capnp.rs
services/: contact.rs
src/: http_handler.rs  main.rs
src/archi/: login.rs  main.rs  modules.rs  proto.rs  security.rs  utils.rs
src/archi/middlewares/: jwt.rs  mod.rs
src/archi/static_modules/: login.rs  mod.rs  staticfs.rs
src/client/: main.rs
src/micro/: main.rs
static/: index.html
