[package]
name = "archi"
version = "0.1.0"
authors = ["gmorer <gmorer@pm.me>"]
edition = "2018"

[[bin]]
name = "archi"
path = "src/archi/main.rs"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tarpc = { version = "0.20", features = ["full"] }
actix-web = "2"
actix-rt = "1"
actix-service = "1"
sled = "0.30.3" # user database
serde_json = "1.0"
json = "*"
jsonwebtoken = "7"
bytes = "0.5"

[dev-dependencies]
lazy_static = "1.4.0"